--- a/src/components/expansion-panel/themes/light/expansion-panel.indigo.scss
+++ b/src/components/expansion-panel/themes/light/expansion-panel.indigo.scss
@@ -4,7 +4,7 @@
     color: color(gray, 600);
 }
 
-slot[name='subTitle'] {
+[part='subTitle'] {
     color: color(gray, 500);
 }
 
